# trigonometric-function

./: .gitignore  Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure.ac  configure~  container.sh  cpu.sh  deb.deb  main.cpp  scriptA.sh  scriptB.sh  trigFunc  trigFunc.1
.deps/: FuncA.Po  HTTP_Server.Po  main.Po
.github/workflows/: make.yml
deb/DEBIAN/: control
tests/: Makefile  Makefile.am  Makefile.in  taylorSineTest1.cpp  taylorSineTest2.cpp  taylorSineTest3.cpp  taylorSineTest4.cpp
tests/.deps/: taylorSineTest1.Po  taylorSineTest2.Po  taylorSineTest3.Po  taylorSineTest4.Po
