AUTOMAKE_OPTIONS = foreign
check_PROGRAMS = \
	taylorSineTest1 \
	taylorSineTest2 \
	taylorSineTest3 \
	taylorSineTest4

SRC_FILES = $(top_builddir)/FuncA.cpp $(top_builddir)/FuncA.h

taylorSineTest1_SOURCES = taylorSineTest1.cpp $(SRC_FILES)
taylorSineTest2_SOURCES = taylorSineTest2.cpp $(SRC_FILES)
taylorSineTest3_SOURCES = taylorSineTest3.cpp $(SRC_FILES)
taylorSineTest4_SOURCES = taylorSineTest4.cpp $(SRC_FILES)

TESTS = \
	taylorSineTest1 \
	taylorSineTest2 \
	taylorSineTest3 \
	taylorSineTest4
